k8s/23-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: taki-demo
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
