k8s/31-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: taki-demo
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
